Corrected button being disabled after submit and layout problem for TMDB when one result only

--- a/app/add/_components/SearchTMDB.module.css
+++ b/app/add/_components/SearchTMDB.module.css
@@ -44,6 +44,7 @@
    gap: 20px;
    margin-bottom: 24px;
    box-shadow: 0 4px 6px 0px rgb(0 0 0 / 0.5);
+   min-width: 610px;
  }
 
  .card {
